--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -9,7 +9,7 @@
         .swipe-wrap
           - @heroes.each_with_index do |hero, index|
             %div{class: "item #{'active' if index == 0}", id: "#{'hero-first' if index == 0}"}
-              = render 'shared/media_hero', main_title: hero.activity_type? ? hero.activity_type : 'Recipe', media_image: hero.step_images.last, media_object: hero
+              = render 'shared/media_hero', main_title: hero.activity_type? ? hero.activity_type : 'Recipe', media_object: hero
       .swipe-indicators#hero-indicators
         - @heroes.each_with_index do |hero, index|
           .swipe-indicator-btn.hero-indicator-btn{class: "#{'indicator-active' if index == 0}", id: "hero-swipe-indicator-#{index}", data: {target: '#swiper', :'slide-to-index' => index}}
