--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -543,10 +543,12 @@ h1, h2, h3, h4
 
 .btn-play
   position: relative
-  width: 80px
-  height: 80px
-  margin: 10px
-  background: $orange
+  width: 50px
+  height: 50px
+  margin: 25px 10px 20px 25px
+  //background: $orange
+  border: 1px solid black
+  @include boxsizing
   @include radius(50px)
   transition: box-shadow 200ms
   opacity: .9
@@ -560,10 +562,10 @@ h1, h2, h3, h4
     position: absolute
     width: 0px
     height: 0px
-    border-top: 20px solid transparent
-    border-bottom: 20px solid transparent
-    border-left: 30px solid white
-    margin: 20px 30px
+    border-top: 12px solid transparent
+    border-bottom: 12px solid transparent
+    border-left: 20px solid black
+    margin: 13px 18px
     opacity: .9
 
 .btn-hero-next
