homepage play button tweaks

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -177,6 +177,7 @@ h1, h2, h3, h4
         font-size: 60px
   .media-header
     background-color: rgba(255,255,255,.5)
+    color: black
     width: 100%
     position: absolute
     bottom: 0px
@@ -558,6 +559,7 @@ h1, h2, h3, h4
   &:hover
     @include shadow
     opacity: 1
+    cursor: pointer
   .btn-play-triangle
     position: absolute
     width: 0px
