update sign up message

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,8 +1,9 @@
 .container
   .hero-unit
     - if params[:email]
-      %h2 Thanks for signing up for our Newsletter!
-      %h5 If you would like to create an account, please complete following:
+      / %h2 Thanks for signing up for our Newsletter!
+      / %h5 If you would like to create an account, please complete following:
+      %h3 Please fill out the following to complete your registration:
     - else
       %h3 Please fill out the following to complete your registration:
     %hr
