--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -79,7 +79,7 @@
             = link_to 'Follow us on Twitter', 'https://twitter.com/@chefsteps', class: 'btn btn-primary'
       .span4
         .well
-          %h3 Sign up for free account
+          %h3 Join The Community!
           %ul
           = form_tag sign_up_url, :method => :get do
             %p= email_field_tag 'email', nil, {class: 'input-block-level', placeholder: 'Enter email', required: true}
