--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -38,6 +38,7 @@ $blue-opaque: rgba(0,109,204,.8)
 $red: #DA4f49
 $red-opaque: rgba(218,79,73,.8)
 $light-gray: #ccc
+$off-white: #F2F2F2
 
 ////////////////////////////////////////
 
@@ -193,6 +194,7 @@ h1, h2, h3, h4
     .media-header-right
       float: left
       width: 50%
+      text-transform: uppercase
       .media-header-content
         text-aigin: left
     .media-header-content
@@ -452,8 +454,8 @@ h1, h2, h3, h4
 /* Unique Styles */
 #logo-window
   // height: 20px
-  box-shadow: 5px 0px 0px 0px white, 10px 0px 0px 0px white, 0px 6px 0px 0px white, 5px 6px 0px 0px white, 10px 6px 0px 0px white, 0px 12px 0px 0px white, 5px 12px 0px 0px white, 10px 12px 0px 0px white, 0px 18px 0px 0px white, 5px 18px 0px 0px white, 10px 18px 0px 0px white
-  background: white
+  box-shadow: 5px 0px 0px 0px $dark_orange, 10px 0px 0px 0px $dark_orange, 0px 6px 0px 0px $dark_orange, 5px 6px 0px 0px $dark_orange, 10px 6px 0px 0px $dark_orange, 0px 12px 0px 0px $dark_orange, 5px 12px 0px 0px $dark_orange, 10px 12px 0px 0px $dark_orange, 0px 18px 0px 0px $dark_orange, 5px 18px 0px 0px $dark_orange, 10px 18px 0px 0px $dark_orange
+  background: $dark_orange
   width: 4px
   height: 5px
   overflow: hidden
@@ -651,14 +653,17 @@ h1, h2, h3, h4
   .navbar-inner
     box-shadow: none
     background-image: none
-    background-color: $orange
+    background-color: $off-white
     border-color: $dark-orange
+    border: none
+    border-top: 2px solid $dark-orange
+    @include shadow
   .brand
     text-shadow: none
-    color: white
+    color: black
   .nav > li > a
     text-shadow: none
-    color: white
+    color: black
   .btn-navbar
     background-image: -webkit-gradient(linear, 0 0, 0 100%, from($orange), to($dark-orange))
     background-image: -moz-linear-gradient(top, $orange, $dark-orange)
