--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -99,7 +99,7 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
 
 h1, h2, h3, h4
   font-family: 'Raleway', sans-serif
-  letter-spacing: 1px
+  font-weight: 500
 
 .word-wrap
   word-wrap: break-word
@@ -462,6 +462,8 @@ h1, h2, h3, h4
   float: left
 .logo-text
   margin-left: 20px
+  font-weight: 500
+  font-family: 'Raleway', sans-serif
 
 #hero-container
   margin-top: -20px
