--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -4,7 +4,7 @@
       = link_to root_url, class: 'brand' do
         / = image_tag 'logo-window.png', id: 'logo-window'
         #logo-window
-        .logo-text chefsteps
+        .logo-text ChefSteps
       %button.btn.btn-navbar{data: {toggle: 'collapse', target: '.nav-collapse'}}
         %span.icon-bar
         %span.icon-bar
