--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -452,21 +452,31 @@ h1, h2, h3, h4
 ////////////////////////////////////////
 
 /* Unique Styles */
-#logo-window
-  // height: 20px
-  $width: 6px
-  $height: 8px
-  $spacing: 1px
-  box-shadow: $width + $spacing 0px 0px 0px $dark_orange, 2*($width + $spacing) 0px 0px 0px $dark_orange, 0px $height + $spacing 0px 0px $dark_orange, $width + $spacing $height + $spacing 0px 0px $dark_orange, 2*($width + $spacing) $height + $spacing 0px 0px $dark_orange, 0px 2*($height + $spacing) 0px 0px $dark_orange, $width + $spacing 2*($height + $spacing) 0px 0px $dark_orange, 2*($width + $spacing) 2*($height + $spacing) 0px 0px $dark_orange, 0px 3*($height + $spacing) 0px 0px $dark_orange, $width + $spacing 3*($height + $spacing) 0px 0px $dark_orange, 2*($width + $spacing) 3*($height + $spacing) 0px 0px $dark_orange
-  background: $dark_orange
-  width: $width
-  height: $height
-  overflow: hidden
-  float: left
-.logo-text
-  margin-left: 20px
-  font-weight: 500
-  font-family: 'Raleway', sans-serif
+.logo-wrapper
+  $width: 7px
+  $height: 9px
+  $spacing: 2px
+  height: 4*$height + 3*$spacing
+  .logo-window
+    box-shadow: $width + $spacing 0px 0px 0px $dark_orange, 2*($width + $spacing) 0px 0px 0px $dark_orange, 0px $height + $spacing 0px 0px $dark_orange, $width + $spacing $height + $spacing 0px 0px $dark_orange, 2*($width + $spacing) $height + $spacing 0px 0px $dark_orange, 0px 2*($height + $spacing) 0px 0px $dark_orange, $width + $spacing 2*($height + $spacing) 0px 0px $dark_orange, 2*($width + $spacing) 2*($height + $spacing) 0px 0px $dark_orange, 0px 3*($height + $spacing) 0px 0px $dark_orange, $width + $spacing 3*($height + $spacing) 0px 0px $dark_orange, 2*($width + $spacing) 3*($height + $spacing) 0px 0px $dark_orange
+    background: $dark_orange
+    width: $width
+    height: $height
+    overflow: hidden
+    float: left
+  .logo-block
+    float: left
+    margin-left: 22px
+    .logo-text
+      font-size: 30px
+      line-height: 30px
+      font-weight: 500
+      font-family: 'Raleway', sans-serif
+    .logo-subtext
+      font-size: 13px
+      margin-top: -5px
+      margin-left: 3px
+
 
 #hero-container
   margin-top: -20px
