--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -144,10 +144,11 @@
       .modal-body
         = course_syllabus(@course)
 
-.container-fluid
-  .section
-    - disqus_id = "activity-#{@activity.id}"
-    = render 'layouts/disqus_comments', disqus_id: disqus_id, disqus_title: @activity.title, disqus_url: activity_url(@activity)
+  .row
+    .span12
+      .section.well
+        - disqus_id = "activity-#{@activity.id}"
+        = render 'layouts/disqus_comments', disqus_id: disqus_id, disqus_title: @activity.title, disqus_url: activity_url(@activity)
 
 = #TODO Remove old code below
 
