update logo subtext

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -7,7 +7,7 @@
           .logo-window
           .logo-block
             .logo-text ChefSteps
-            .logo-subtext cooking connected
+            .logo-subtext cook connected
       %button.btn.btn-navbar{data: {toggle: 'collapse', target: '.nav-collapse'}}
         %span.icon-bar
         %span.icon-bar
