--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -412,10 +412,10 @@ h1, h2, h3, h4
   text-align: center
   margin: 0 auto
   border-radius: 10px
-  border: 1px solid $light-gray
+  border: 1px solid $orange
   @include boxsizing
 .indicator-active
-  border: 2px solid $orange
+  border: 2px solid $dark_orange
   background: white
 
 .swipe-wrap
@@ -473,7 +473,7 @@ h1, h2, h3, h4
       font-weight: 500
       font-family: 'Raleway', sans-serif
     .logo-subtext
-      font-size: 13px
+      font-size: 14px
       margin-top: -5px
       margin-left: 3px
       font-weight: 400
@@ -564,9 +564,9 @@ h1, h2, h3, h4
 
 .btn-play
   position: relative
-  width: 50px
-  height: 50px
-  margin: 25px 10px 20px 25px
+  width: 40px
+  height: 40px
+  margin: 30px 10px 20px 30px
   //background: $orange
   border: 1px solid black
   @include boxsizing
@@ -584,10 +584,10 @@ h1, h2, h3, h4
     position: absolute
     width: 0px
     height: 0px
-    border-top: 12px solid transparent
-    border-bottom: 12px solid transparent
-    border-left: 20px solid black
-    margin: 13px 18px
+    border-top: 7px solid transparent
+    border-bottom: 7px solid transparent
+    border-left: 12px solid black
+    margin: 12px 15px
     opacity: .9
 
 .btn-hero-next
