--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -126,7 +126,7 @@
             .item
               = link_to activity_path(technique) do
                 = render 'shared/media_centered', media: technique, size: 'small'
-      %h3 Related
+      %h3 Recipes
       .carousel-scroll#related-carousel
         .carousel-scroll-inner
           - @recipes.each_with_index do |recipe,index|
@@ -143,7 +143,6 @@
         %h3= @course.title
       .modal-body
         = course_syllabus(@course)
-
   .row
     .span12
       .section.well
