update navigation buttons

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -454,7 +454,7 @@ h1, h2, h3, h4
 /* Unique Styles */
 .logo-wrapper
   $width: 7px
-  $height: 9px
+  $height: 10px
   $spacing: 2px
   height: 4*$height + 3*$spacing
   .logo-window
@@ -677,20 +677,21 @@ h1, h2, h3, h4
   .brand
     text-shadow: none
     color: black
+    padding: 5px 20px
   .nav
     .nav-item-border
       border-left: 1px solid $light-gray
   .nav > li > a
     text-shadow: none
     color: black
-    line-height: 45px
+    line-height: 36px
     font-size: 16px
     font-weight: 200
     &:hover
       background: $orange
       color: white
   .navbar-form
-    margin: 18px 10px 17px
+    margin: 14px 10px 12px
     input
       margin: 0px
   .btn-navbar
