--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -43,7 +43,7 @@ $off-white: #F2F2F2
 ////////////////////////////////////////
 
 #main-container
-  margin-top: 80px
+  margin-top: 70px
   margin-bottom: 60px
 
 /* Bootstrap Overrides */
@@ -469,18 +469,20 @@ h1, h2, h3, h4
     margin-left: 22px
     .logo-text
       font-size: 30px
-      line-height: 30px
+      line-height: 29px
       font-weight: 500
       font-family: 'Raleway', sans-serif
+      margin-top: 3px
     .logo-subtext
       font-size: 14px
       margin-top: -5px
       margin-left: 3px
       font-weight: 400
+      margin-bottom: -1px
 
 
 #hero-container
-  margin-top: -21px
+  margin-top: -23px
   padding: 0px
   //max-height: 586px
   z-index: 999
@@ -677,21 +679,21 @@ h1, h2, h3, h4
   .brand
     text-shadow: none
     color: black
-    padding: 5px 20px
+    padding: 4px 20px
   .nav
     .nav-item-border
       border-left: 1px solid $light-gray
   .nav > li > a
     text-shadow: none
     color: black
-    line-height: 36px
+    line-height: 34px
     font-size: 16px
     font-weight: 200
     &:hover
       background: $orange
       color: white
   .navbar-form
-    margin: 14px 10px 12px
+    margin: 12px 10px 12px
     input
       margin: 0px
   .btn-navbar
