--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -671,7 +671,7 @@ h1, h2, h3, h4
   .navbar-inner
     box-shadow: none
     background-image: none
-    background-color: white
+    background-color: #F2F2F2
     border-color: $dark-orange
     border: none
     border-top: 2px solid $dark-orange
