--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -34,7 +34,9 @@
 
     = yield :footer
   / = render 'layouts/youtube'
-  = javascript_include_tag 'application'
+  
+  %script{src: "//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"}
   %script{src: "http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"}
+  = javascript_include_tag 'application'
   = render 'layouts/app_init'
   = yield(:custom_js)
