update navigation down

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -17,7 +17,7 @@
           %li.dropdown.nav-item-border
             = link_to 'javascript:void(0);', class: 'dropdown-toggle', data: {toggle: 'dropdown'} do
               Cooking
-              %i.icon-angle-down
+              %i.icon-chevron-down
             %ul.dropdown-menu
               .dropdown-background
               %li= link_to 'Recipes', recipe_gallery_index_path
@@ -25,7 +25,7 @@
           %li.dropdown.nav-item-border
             = link_to 'javascript:void(0);', class: 'dropdown-toggle', data: {toggle: 'dropdown'} do
               Learning
-              %i.icon-angle-down
+              %i.icon-chevron-down
             %ul.dropdown-menu
               .dropdown-background
               %li= link_to 'Sous Vide Course', course_path('accelerated-sous-vide-cooking-course')
