basic step videos

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -270,6 +270,8 @@ h1, h2, h3, h4
           display: none
     .step-image
       display: none
+    .step-video
+      display: none
 
 /* Emphasizes the content being hovered */
 // .ordered-steps:hover > .ordered-step-item
