--- a/app/views/sciences/index.html.haml
+++ b/app/views/sciences/index.html.haml
@@ -1,6 +1,6 @@
 .row
   .span12
-    %h2 Science of
+    %h2 Culinary Knowledge and Stuff We Like
     = paginate @sciences
     .row.gallery
       - @sciences.each do |science|
