fix content order on homepage

--- a/app/views/shared/_media_hero.html.haml
+++ b/app/views/shared/_media_hero.html.haml
@@ -30,4 +30,7 @@
         .btn-play.pull-left
           .btn-play-triangle
         .media-header-content
-          = "See the #{media_object.activity_type.first}"
+          - if media_object.activity_type.first == 'Science'
+            = "See the Video"
+          - else
+            = "See the #{media_object.activity_type.first}"
