--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -59,17 +59,24 @@
 .row.section
   .span12
     .row
-      .span8
-        - cache @discussion do
-          %h3 Latest From Our Forums:
-          %h4= @discussion[:name]
-          %blockquote.word-wrap
-            %p= truncate(strip_tags(@discussion[:body]), length: 300, separator: ' ')
-            %small
-              %cite
-                = @discussion[:first_name]
-          - discussion_link = @discussion[:url].gsub('https://chefsteps.vanillaforums.com','http://forum.chefsteps.com')
-          = link_to 'Join the Discussion', discussion_link, class: 'btn btn-primary'
+      .span8#discussion
+        / %h3 Latest From Our Forums:
+        / %h4= @discussion[:name]
+        / %blockquote.word-wrap
+        /   %p= truncate(strip_tags(@discussion[:body]), length: 300, separator: ' ')
+        /   %small
+        /     %cite
+        /       = @discussion[:first_name]
+        / - discussion_link = @discussion[:url].gsub('https://chefsteps.vanillaforums.com','http://forum.chefsteps.com')
+        / = link_to 'Join the Discussion', discussion_link, class: 'btn btn-primary'
+        %h3 Latest From Our Forums:
+        %h4.discussion-name
+        %blockquote.word-wrap
+          %p.discussion-body
+          %small
+            %cite
+              .discussion-author
+        = link_to 'Join the Discussion', '#', class: 'btn btn-primary discussion-link'
 
         %hr
 
