--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -128,11 +128,8 @@ h1, h2, h3, h4
 
 .media-centered
   position: relative
-  a
-    color: white
-    font-size: 18px
   .media-centered-overlay
-    display: none
+    //display: none
     opacity: 0
     background: black
     position: absolute
@@ -143,13 +140,19 @@ h1, h2, h3, h4
     text-transform: uppercase
     position: absolute
     text-align: center
-    top: 45%
+    bottom: 0
     width: 100%
-    color: white
-    text-shadow: 0px 1px rgba(0,0,0,.6)
+    color: black
+    background: rgba(255,255,255,.6)
+    padding: 10px 0px
+    @include transition(color 500ms)
+    @include transition(background 500ms)
   &:hover
     .media-centered-overlay
       opacity: .5
+    .title-block
+      color: white
+      background: none
 
 .media-centered-medium
   width: 100%
