black links for content

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -108,6 +108,11 @@ h1, h2, h3, h4
 
 /* Media Objects */
 
+.black-link
+  color: black
+  &:hover
+    color: black
+
 .gallery
   .media-centered
     margin-bottom: 20px
