--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -18,7 +18,7 @@
             .nav-item-border
             = link_to 'javascript:void(0);', class: 'dropdown-toggle', data: {toggle: 'dropdown'} do
               Cooking
-              %i.icon-chevron-down
+              %i.icon-angle-down
             %ul.dropdown-menu
               .dropdown-background
               %li= link_to 'Recipes', recipe_gallery_index_path
@@ -27,7 +27,7 @@
             .nav-item-border
             = link_to 'javascript:void(0);', class: 'dropdown-toggle', data: {toggle: 'dropdown'} do
               Learning
-              %i.icon-chevron-down
+              %i.icon-angle-down
             %ul.dropdown-menu
               .dropdown-background
               %li= link_to 'Sous Vide Course', course_path('accelerated-sous-vide-cooking-course')
